<resources>
    <string name="app_name">TastyCreations</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_starter">Starter</string>
    <string name="menu_breakfast">Breakfast</string>
    <string name="menu_vegetarian">Vegetarian</string>
    <string name="menu_vegan">Vegan</string>
    <string name="menu_seafood">Seafood</string>
    <string name="title_login">Login</string>
    <string name="title_signup">SignUp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_register">Register</string>
    <string name="signout">SignOut</string>
    <string name="google">Login with Google</string>

    <!-- FACEBOOK LOGIN-->


    <string name="facebook_app_id">952803155847964</string>
    <string name="fb_login_protocol_scheme">fb952803155847964</string>
    <string name="facebook_client_token">4f433f9bf57094f0fe676de5ceee2761</string>




    <!-- FACEBOOK LOGIN-->
</resources>